--- a/intersection-observer/css/styles.css
+++ b/intersection-observer/css/styles.css
@@ -5,7 +5,7 @@
 .long-div {
   padding: 1500px 0; }
 
-.sticky-sentinal {
+.sticky-sentinel {
   height: 100px;
   background: rebeccapurple;
   width: 100%; }
