--- a/loading-animations/scss/styles.scss
+++ b/loading-animations/scss/styles.scss
@@ -41,3 +41,11 @@ body {
 @import 'dots-04';
 @import 'dots-05';
 @import 'dots-06';
+@import 'dots-07';
+@import 'dots-08';
+@import 'dots-09';
+@import 'dots-10';
+@import 'dots-11';
+@import 'dots-12';
+@import 'dots-13';
+@import 'dots-14';
