--- a/loading-animations/css/styles.css
+++ b/loading-animations/css/styles.css
@@ -24,6 +24,20 @@ body {
   margin: 10px;
   position: relative;
   width: 350px; }
+  .dot-box__indicator {
+    align-items: center;
+    background: #e5e5e5;
+    color: #fff;
+    display: flex;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 10px;
+    font-weight: bolder;
+    height: 24px;
+    justify-content: center;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 24px; }
 
 .dots-01 .loading {
   list-style: none;
