--- a/loading-animations/css/styles-02.css
+++ b/loading-animations/css/styles-02.css
@@ -6,78 +6,53 @@
 * {
   box-sizing: border-box; }
 
+html,
 body {
-  background: #f7f7f7;
-  margin: 50px; }
+  height: 100%;
+  margin: 0; }
 
 .dots {
   align-items: center;
   background: #fff;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15), 0 2px 2px rgba(0, 0, 0, 0.15), 0 4px 4px rgba(0, 0, 0, 0.15), 0 8px 8px rgba(0, 0, 0, 0.15);
   display: flex;
-  height: 200px;
+  height: 100%;
   margin: 0 auto;
   position: relative;
-  width: 550px; }
+  width: 660px; }
   .dots + .dots {
     margin-top: 30px; }
   .dots__dot {
     background: #e5e5e5;
     border-radius: 50%;
-    height: 110px;
+    height: 145px;
     position: absolute;
-    width: 110px; }
-  .dots__dot-wrapper {
-    align-items: center;
-    display: flex;
-    height: 100%;
-    position: absolute;
-    width: 100%; }
+    width: 145px; }
+    .dots__dot.dots__dot--01 {
+      background: var(--color-blue); }
+    .dots__dot.dots__dot--02 {
+      background: var(--color-teal); }
+    .dots__dot.dots__dot--03 {
+      background: var(--color-green); }
 
-.dots--01 .dots__dot {
-  animation-name: dotSlide01;
-  animation-duration: 2s;
-  animation-timing-function: ease;
-  animation-delay: 0s;
-  animation-iteration-count: 1;
-  animation-direction: normal;
-  animation-fill-mode: forwards;
-  animation-play-state: running; }
+.dots--01 .dots__dot--01 {
+  animation: dotSlide01 1.5s linear 0s infinite; }
 
-.dots--02 .dots__dot-wrapper {
-  animation-name: dotSlide02;
-  animation-duration: 2s;
-  animation-timing-function: ease;
-  animation-delay: 0s;
-  animation-iteration-count: 1;
-  animation-direction: normal;
-  animation-fill-mode: forwards;
-  animation-play-state: running; }
+.dots--01 .dots__dot--02 {
+  animation: dotSlide01 1.5s linear -0.5s infinite; }
 
-.dots--03 .dots__dot-wrapper {
-  animation-name: dotSlide03;
-  animation-duration: 2s;
-  animation-timing-function: ease;
-  animation-delay: 0s;
-  animation-iteration-count: 1;
-  animation-direction: normal;
-  animation-fill-mode: forwards;
-  animation-play-state: running; }
+.dots--01 .dots__dot--03 {
+  animation: dotSlide01 1.5s linear -1s infinite; }
 
 @keyframes dotSlide01 {
   0% {
-    left: 0; }
+    opacity: 0;
+    transform: translate3d(0, 0, 0) scale3d(0.8, 0.8, 1); }
+  20% {
+    opacity: 1;
+    transform: translate3d(103px, 0, 0) scale3d(1, 1, 1); }
+  80% {
+    opacity: 1;
+    transform: translate3d(412px, 0, 0) scale3d(1, 1, 1); }
   100% {
-    left: 100%; } }
-
-@keyframes dotSlide02 {
-  0% {
-    transform: translateX(0%); }
-  100% {
-    transform: translateX(100%); } }
-
-@keyframes dotSlide03 {
-  0% {
-    transform: translate3d(0, 0, 0); }
-  100% {
-    transform: translate3d(100%, 0, 0); } }
+    opacity: 0;
+    transform: translate3d(515px, 0, 0) scale3d(0.8, 0.8, 1); } }
