--- a/loading-animations/scss/styles-02.scss
+++ b/loading-animations/scss/styles-02.scss
@@ -13,45 +13,48 @@ body {
   // background: #f7f7f7;
   height: 100%;
   margin: 0;
+  background: #e5e5e5;
 }
 
-.dots {
-  align-items: center;
-  background: #fff;
-  // box-shadow:
-  //   0 1px 1px rgba(0,0,0,0.15), 
-  //   0 2px 2px rgba(0,0,0,0.15), 
-  //   0 4px 4px rgba(0,0,0,0.15), 
-  //   0 8px 8px rgba(0,0,0,0.15)
-  // ;
-  display: flex;
-  height: 100%;
-  margin: 0 auto;
-  position: relative;
-  width: 660px;
+// ****************************************
 
-  & + .dots {
-    margin-top: 30px;
+.dots {
+  background: #fff;
+  display: inline-flex;
+  flex-direction: column;
+  padding: 36px 54px;
+
+  &__label {
+    margin-bottom: 24px;
+  }
+  
+  &__container {
+    align-self: center;
+    height: 24px;
+    width: 128px;
   }
 
   &__dot {
-    background: #e5e5e5;
+    animation: dotSlide01 1.2s linear infinite;
     border-radius: 50%;
-    height: 145px;
+    height: 24px;
     position: absolute;
-    width: 145px;
+    width: 24px;
 
-    &.dots__dot--01 { background: var(--color-blue); }
-    &.dots__dot--02 { background: var(--color-teal); }
-    &.dots__dot--03 { background: var(--color-green); }
+    &.dots__dot--01 {
+      background: var(--color-blue);
+    }
+
+    &.dots__dot--02 {
+      background: var(--color-teal);
+      animation-delay: -0.4s;
+    }
+
+    &.dots__dot--03 {
+      background: var(--color-green);
+      animation-delay: -0.8s;
+    }
   }
-}
-
-.dots--01 {
-
-  .dots__dot--01 { animation: dotSlide01 1.5s linear 0s infinite; }
-  .dots__dot--02 { animation: dotSlide01 1.5s linear -0.5s infinite; }
-  .dots__dot--03 { animation: dotSlide01 1.5s linear -1s infinite; }
 }
 
 @keyframes dotSlide01 {
@@ -61,14 +64,14 @@ body {
   }
   20% {
     opacity: 1;
-    transform: translate3d(103px, 0, 0) scale3d(1, 1, 1);
+    transform: translate3d(21px, 0, 0) scale3d(1, 1, 1);
   }
   80% {
     opacity: 1;
-    transform: translate3d(412px, 0, 0) scale3d(1, 1, 1);
+    transform: translate3d(83px, 0, 0) scale3d(1, 1, 1);
   }
   100% {
     opacity: 0;
-    transform: translate3d(515px, 0, 0) scale3d(0.8, 0.8, 1);
+    transform: translateX(104px) scale3d(0.8, 0.8, 1);
   }
 }
