finished lesson six

--- a/vue-mastery-intro/css/styles.css
+++ b/vue-mastery-intro/css/styles.css
@@ -72,3 +72,11 @@ textarea {
 .activeTab {
   color: #16C0B0;
   text-decoration: underline; }
+
+.button-wrap {
+  display: flex; }
+  .button-wrap button:last-child {
+    margin-left: 5px; }
+
+.out-of-stock {
+  text-decoration: line-through; }
