--- a/svg-animation/css/styles.css
+++ b/svg-animation/css/styles.css
@@ -53,3 +53,15 @@
 svg {
   height: 24px;
   width: 128px; }
+
+.dot-waapi {
+  height: 24px;
+  border-radius: 50%;
+  position: absolute;
+  width: 24px; }
+  .dot-waapi--01 {
+    background: #005984; }
+  .dot-waapi--02 {
+    background: #26bcd7; }
+  .dot-waapi--03 {
+    background: #54b948; }
