using cloneNode to avoid layout shift when element gets taken out of doc flow

--- a/intersection-observer/css/styles.css
+++ b/intersection-observer/css/styles.css
@@ -27,6 +27,12 @@
   background: blue; }
 
 .nav-wrapper.sticky {
+  display: block;
   position: fixed;
   top: 0;
   width: 100%; }
+  .nav-wrapper.sticky .banner02 {
+    height: 80px; }
+
+.cloned {
+  display: none; }
