--- a/container-queries/scss/styles.scss
+++ b/container-queries/scss/styles.scss
@@ -1,1 +1,19 @@
-// sandbox styles
+.wrapper {
+    background: red;
+    width: 800px;
+
+    container-type: inline-size;
+    container-name: card;
+}
+
+.card {
+    background: green;
+    margin: 0 auto;
+    width: 200px;
+}
+
+@container card (min-width: 400px) {
+    .card {
+        background: yellow;
+    }
+}
