--- a/go-make-things-async/css/styles.css
+++ b/go-make-things-async/css/styles.css
@@ -1,13 +1,8 @@
-.accordion {
-  font-family: Helvetica; }
-  .accordion__summary {
-    background: #067BC2;
-    border-bottom: 1px solid #fff;
-    color: #fff;
-    cursor: pointer;
-    font-weight: bold;
-    list-style: #fff;
-    padding: 20px; }
-  .accordion__content {
-    background: #84BCDA;
-    padding: 25px; }
+#counter {
+  background: gray;
+  display: inline-block;
+  font-weight: bold;
+  padding: 10px; }
+
+hr {
+  margin: 30px 0; }
