--- a/go-make-things-async/scss/styles.scss
+++ b/go-make-things-async/scss/styles.scss
@@ -1,1 +1,10 @@
-// sandbox styles
+#counter {
+    background: gray;
+    display: inline-block;
+    font-weight: bold;
+    padding: 10px;
+}
+
+hr {
+    margin: 30px 0;
+}
