--- a/scroll-driven-animation/css/styles.css
+++ b/scroll-driven-animation/css/styles.css
@@ -1,10 +1,13 @@
 /*
     New stuff!
     - animation-timeline
-    - scroll-timeline
+    - scroll-timeline:
+        - scroll-timeline-name
+        - scroll-timeline-axis
     - timeline-scope
 */
 body {
+  font-family: Arial, Helvetica, sans-serif;
   padding-top: 50px; }
 
 .scroll-to-top {
@@ -16,10 +19,10 @@ body {
 
 @keyframes revealScroller {
   0%,
-  30% {
+  20% {
     opacity: 0;
     transform: translateY(100%); }
-  38%,
+  30%,
   100% {
     opacity: 1;
     transform: translateY(0); } }
@@ -32,7 +35,6 @@ body {
   left: 0;
   position: fixed;
   top: 0;
-  transform: scaleX(0);
   transform-origin: left;
   width: 100%; }
 
@@ -41,3 +43,66 @@ body {
     transform: scaleX(0); }
   100% {
     transform: scaleX(1); } }
+
+@keyframes progressScroller2 {
+  0% {
+    transform: scaleY(0); }
+  100% {
+    transform: scaleY(1); } }
+
+.random-box-01 {
+  background: lightgray;
+  height: 250px;
+  position: fixed;
+  right: 150px;
+  top: 150px;
+  width: 400px; }
+  .random-box-01__bar {
+    animation: progressScroller2 linear;
+    animation-timeline: scroll(root);
+    background: gray;
+    height: 100%;
+    position: absolute;
+    transform-origin: top;
+    width: 20px; }
+    .random-box-01__bar:last-child {
+      left: calc(100% - 20px);
+      right: unset;
+      transform-origin: bottom; }
+
+.random-box-02 {
+  border-bottom: 3px solid black;
+  left: 100px;
+  position: absolute;
+  top: 300px;
+  width: 300px; }
+  .random-box-02 > span {
+    display: block;
+    margin-bottom: 10px; }
+  .random-box-02 ul {
+    border: 3px solid black;
+    border-bottom: none;
+    height: 404px;
+    list-style: none;
+    margin: 0;
+    overflow-y: scroll;
+    padding: 0; }
+  .random-box-02 li {
+    border-bottom: 3px dashed gray;
+    padding: 30px; }
+    .random-box-02 li:last-child {
+      border-bottom: none; }
+
+.random-box-03 {
+  position: absolute;
+  right: 60px;
+  top: 500px;
+  width: 640px; }
+  .random-box-03 > span {
+    display: block;
+    margin-bottom: 10px; }
+  .random-box-03__inner {
+    background: red;
+    height: 100px;
+    overflow-x: scroll;
+    width: 100%; }
