--- a/scroll-driven-animation/scss/styles.scss
+++ b/scroll-driven-animation/scss/styles.scss
@@ -94,6 +94,10 @@ body {
 
 // --------------------------------------------------
 
+.scroll-timeline-wrapping-parent {
+    timeline-scope: --random-box-02__timeline;
+}
+
 .random-box-02 {
     border-bottom: 3px solid black;
     left: 100px;
@@ -114,6 +118,8 @@ body {
         margin: 0;
         overflow-y: scroll;
         padding: 0;
+        scroll-timeline-axis: block;
+        scroll-timeline-name: --random-box-02__timeline;
     }
 
     li {
@@ -138,9 +144,22 @@ body {
     }
 
     &__inner {
-        background: red;
+        animation: moveBackground linear;
+        animation-timeline: --random-box-02__timeline;
+        background-image: url(../mario.png);
+        background-position: 0 0;
+        background-repeat: no-repeat;
         height: 100px;
         overflow-x: scroll;
         width: 100%;
+    }
+}
+
+@keyframes moveBackground {
+    0% {
+        background-position: 0 0;
+    }
+    100% {
+        background-position: 100% 0;
     }
 }
