--- a/spinny-numbers/css/styles.css
+++ b/spinny-numbers/css/styles.css
@@ -1,13 +1,18 @@
-.accordion {
-  font-family: Helvetica; }
-  .accordion__summary {
-    background: #067BC2;
-    border-bottom: 1px solid #fff;
-    color: #fff;
-    cursor: pointer;
-    font-weight: bold;
-    list-style: #fff;
-    padding: 20px; }
-  .accordion__content {
-    background: #84BCDA;
-    padding: 25px; }
+.num-wrapper {
+  background: lightcyan;
+  display: flex;
+  height: 50px; }
+
+.num-column {
+  background: lightcoral;
+  margin: 0 10px; }
+
+.num {
+  align-items: center;
+  background: lightgray;
+  display: flex;
+  height: 50px;
+  justify-content: center;
+  width: 50px; }
+  .num:nth-child(odd) {
+    background: #e5e5e5; }
