--- a/spinny-numbers/scss/styles.scss
+++ b/spinny-numbers/scss/styles.scss
@@ -1,23 +1,38 @@
+input {
+    margin-right: 10px;
+    text-align: center;
+    width: 50px;
+}
+
 .num-wrapper {
     background: lightcyan;
     display: flex;
-    height: 50px;
+    height: 150px;
 }
 
 .num-column {
     background: lightcoral;
     margin: 0 10px;
+    transition: all 0.5s;
 }
 
 .num {
     align-items: center;
     background: lightgray;
     display: flex;
-    height: 50px;
+    font-family: sans-serif;
+    font-size: 50px;
+    font-weight: bold;
+    height: 150px;
     justify-content: center;
-    width: 50px;
+    width: 150px;
 
     &:nth-child(odd) {
         background: #e5e5e5;
     }
+}
+
+.num-column--update-pos,
+.num-column--1 {
+    transition: all 0.5s;
 }
