--- a/container-queries/css/styles.css
+++ b/container-queries/css/styles.css
@@ -1,6 +1,9 @@
+body {
+  margin: 0; }
+
 .wrapper {
   background: red;
-  width: 800px;
+  width: 100%;
   container-type: inline-size;
   container-name: card; }
 
