--- a/container-queries/scss/styles.scss
+++ b/container-queries/scss/styles.scss
@@ -1,6 +1,10 @@
+body {
+    margin: 0;
+}
+
 .wrapper {
     background: red;
-    width: 800px;
+    width: 100%;
 
     container-type: inline-size;
     container-name: card;
