--- a/utopia-fluid-resposive/css/styles.css
+++ b/utopia-fluid-resposive/css/styles.css
@@ -1,2 +1,35 @@
+/* @link https://utopia.fyi/type/calculator?c=320,18,1.2,1240,20,1.25,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
+:root {
+  --step--2: clamp(0.7813rem, 0.7747rem + 0.0326vw, 0.8rem);
+  --step--1: clamp(0.9375rem, 0.9158rem + 0.1087vw, 1rem);
+  --step-0: clamp(1.125rem, 1.0815rem + 0.2174vw, 1.25rem);
+  --step-1: clamp(1.35rem, 1.2761rem + 0.3696vw, 1.5625rem);
+  --step-2: clamp(1.62rem, 1.5041rem + 0.5793vw, 1.9531rem);
+  --step-3: clamp(1.9438rem, 1.7707rem + 0.8652vw, 2.4413rem);
+  --step-4: clamp(2.3325rem, 2.0823rem + 1.2511vw, 3.0519rem);
+  --step-5: clamp(2.7994rem, 2.4461rem + 1.7663vw, 3.815rem); }
+
 body {
   margin: 0; }
+
+.copy {
+  background: lightgray;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin: 50px;
+  outline: 1px dotted black;
+  padding: 50px; }
+  .copy h1 {
+    margin: 0;
+    font-size: var(--step-5); }
+  .copy h2 {
+    margin: 0;
+    font-size: var(--step-4); }
+  .copy h3 {
+    margin: 0;
+    font-size: var(--step-3); }
+  .copy h4 {
+    margin: 0;
+    font-size: var(--step-2); }
+  .copy p {
+    margin: 0;
+    font-size: var(--step-0); }
