--- a/utopia-fluid-resposive/scss/styles.scss
+++ b/utopia-fluid-resposive/scss/styles.scss
@@ -1,21 +1,17 @@
-/* @link https://utopia.fyi/type/calculator?c=320,18,1.2,1240,20,1.25,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
+/* @link https://utopia.fyi/type/calculator?c=375,14,1.2,1240,16,1.25,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
 
 :root {
-	--step--2: clamp(0.7813rem, 0.7747rem + 0.0326vw, 0.8rem);
-	--step--1: clamp(0.9375rem, 0.9158rem + 0.1087vw, 1rem);
-	--step-0: clamp(1.125rem, 1.0815rem + 0.2174vw, 1.25rem);
-	--step-1: clamp(1.35rem, 1.2761rem + 0.3696vw, 1.5625rem);
-	--step-2: clamp(1.62rem, 1.5041rem + 0.5793vw, 1.9531rem);
-	--step-3: clamp(1.9438rem, 1.7707rem + 0.8652vw, 2.4413rem);
-	--step-4: clamp(2.3325rem, 2.0823rem + 1.2511vw, 3.0519rem);
-	--step-5: clamp(2.7994rem, 2.4461rem + 1.7663vw, 3.815rem);
-  }
+	--step--2: clamp(0.6075rem, 0.5934rem + 0.0601vw, 0.64rem);
+	--step--1: clamp(0.7294rem, 0.6988rem + 0.1306vw, 0.8rem);
+	--step-0: clamp(0.875rem, 0.8208rem + 0.2312vw, 1rem);
+	--step-1: clamp(1.05rem, 0.9633rem + 0.3699vw, 1.25rem);
+	--step-2: clamp(1.26rem, 1.1289rem + 0.5595vw, 1.5625rem);
+	--step-3: clamp(1.5119rem, 1.3206rem + 0.8162vw, 1.9531rem);
+	--step-4: clamp(1.8144rem, 1.5426rem + 1.1595vw, 2.4413rem);
+	--step-5: clamp(2.1775rem, 1.7984rem + 1.6173vw, 3.0519rem);
+}
 
-
-
-
-
-
+// **************************************************
 
 body {
 	margin: 0;
@@ -34,4 +30,7 @@ body {
 	h4 { margin: 0; font-size: var(--step-2); }
 
 	p { margin: 0; font-size: var(--step-0); }
+
+	small { margin: 0; font-size: var(--step--1); }
+	small span { margin: 0; font-size: var(--step--2); }
 }
