mucking about with text

--- a/three-js/css/styles.css
+++ b/three-js/css/styles.css
@@ -1,2 +1,10 @@
 body {
   margin: 0; }
+
+#info {
+  position: absolute;
+  top: 10px;
+  width: 100%;
+  text-align: center;
+  z-index: 100;
+  display: block; }
