--- a/vertical-progress-slider/css/styles.css
+++ b/vertical-progress-slider/css/styles.css
@@ -1,13 +1,36 @@
-.accordion {
-  font-family: Helvetica; }
-  .accordion__summary {
-    background: #067BC2;
-    border-bottom: 1px solid #fff;
-    color: #fff;
-    cursor: pointer;
-    font-weight: bold;
-    list-style: #fff;
-    padding: 20px; }
-  .accordion__content {
-    background: #84BCDA;
-    padding: 25px; }
+body {
+  margin: 0;
+  padding: 50px 100px; }
+
+hr {
+  margin-bottom: 50px; }
+
+.vps {
+  border: 5px dashed gray;
+  display: flex;
+  height: 550px;
+  width: fit-content; }
+
+.vps__scrollbar {
+  align-content: center;
+  border: 5px dashed red;
+  margin-right: 30px; }
+
+.vps__content {
+  border: 5px dashed orange;
+  margin-right: 30px;
+  width: 350px; }
+
+.vps__content-eyebrow {
+  border: 5px dashed yellow;
+  margin-bottom: 15px; }
+
+.vps__content-scroll-area {
+  border: 5px dashed green; }
+
+.vps__image {
+  align-content: center;
+  border: 5px dashed blue; }
+  .vps__image img {
+    display: block;
+    height: 540px; }
