getting animations popping on mouse in and out

--- a/button-playground/css/styles.css
+++ b/button-playground/css/styles.css
@@ -37,3 +37,23 @@ hr {
   .button-1 svg {
     display: block;
     fill: #28724F; }
+  .button-1.button-test-in {
+    animation-duration: 1000ms;
+    animation-fill-mode: forwards;
+    animation-name: button-test-in; }
+  .button-1.button-test-out {
+    animation-duration: 1000ms;
+    animation-fill-mode: forwards;
+    animation-name: button-test-out; }
+
+@keyframes button-test-in {
+  from {
+    transform: translateX(0); }
+  to {
+    transform: translateX(50px); } }
+
+@keyframes button-test-out {
+  from {
+    transform: translateX(50px); }
+  to {
+    transform: translateX(0); } }
